...
                    android:textColor="@color/colorTextIcons"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintTop_toBottomOf="@id/tvInfoOverview"
                    tools:text="As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the 

                <TextView
                    android:id="@+id/tvReadMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:includeFontPadding="false"
                    android:text="@string/read_more"
...
